--- a/style.css
+++ b/style.css
@@ -16,32 +16,63 @@ body {
   padding: 20px;
   width: 85%;
 }
-.heading{
-    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-    font-size: 35px;
-    font-weight: 200;
-    letter-spacing: 2px;
-    text-shadow: 5px 5px 2px rgba(0, 0, 0, 0.3);
+.heading {
+  font-family: Impact, "Arial Narrow Bold", sans-serif;
+  font-size: 35px;
+  font-weight: 200;
+  letter-spacing: 2px;
+  text-shadow: 5px 5px 2px rgba(0, 0, 0, 0.3);
 }
-.joke{
-    font-size: 25px;
-    font-weight: 500;
-    margin: 40px;
+.joke {
+  font-size: 25px;
+  font-weight: 500;
+  margin: 40px;
 }
-.btn{
-    background-color: rgba(255, 255, 255, 0.3);
-    border-color: rgba(255, 255, 255, 0.6);
-    text-transform: uppercase;
-    color: darkgreen;
-    border-radius: 5px;
-    font-weight: 700;
-    cursor: pointer;
-    font-size: 18px;
-    padding: 10px;
-    width: 300px;
+.btn {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-color: rgba(255, 255, 255, 0.6);
+  text-transform: uppercase;
+  color: darkgreen;
+  border-radius: 5px;
+  font-weight: 700;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 10px;
+  width: 300px;
 }
-.btn:hover{
+.btn:hover {
   background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
   transition: all 300ms ease;
 }
+
+@media screen and (max-width: 576.98px) {
+  .container {
+    width: 75%;
+  }
+  .btn {
+    width: 200px;
+  }
+  .joke {
+    font-size: 22px;
+    font-weight: 500;
+    margin: 20px !important;
+  }
+}
+@media screen and (max-width: 276.98px) {
+    .container {
+      width: 75%;
+    }
+    .heading {
+        font-size: 28px;
+      }
+    .btn {
+      width: 150px;
+      font-size: 14px;
+    }
+    .joke {
+      font-size: 20px;
+      font-weight: 500;
+      margin: 20px !important;
+    }
+  }
